--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>SUPERHERO API</title>
 </head>
 <body>
-    <a href="/favourites.html"><h3 id="favourite-link">Favourites</h3></a>
+    <a href="./favourites.html"><h3 id="favourite-link">Favourites</h3></a>
     <div class="wrapper">
         <div class="search-input">
             <input type="text" placeholder="Type to search...">
