--- a/favourites.html
+++ b/favourites.html
@@ -9,8 +9,8 @@
     <title>Favourites</title>
 </head>
 <body>
-    <a href="/"><h3 id="home-link">Home</h3></a>
-    <a href="/favourites.html"><h3 id="clear-all-link">Clear All</h3></a>
+    <a href="./"><h3 id="home-link">Home</h3></a>
+    <a href="./favourites.html"><h3 id="clear-all-link">Clear All</h3></a>
     <h1>Favourites</h1>
     <div class="all-fav">
 
