--- a/favourites.html
+++ b/favourites.html
@@ -22,6 +22,6 @@
             </div>
         </div> -->
     </div>
-    <script src="../js/favScript.js"></script>
+    <script src="./js/favScript.js"></script>
 </body>
 </html>
